--- a/FireAlarmApp/package.json
+++ b/FireAlarmApp/package.json
@@ -14,14 +14,18 @@
     "@types/web-push": "^3.6.3",
     "app-root-path": "^3.1.0",
     "body-parser": "^1.20.2",
+    "bootstrap": "^5.3.3",
     "chalk": "^4.1.2",
     "cors": "^2.8.5",
     "errorhandler": "^1.5.1",
     "express": "^4.18.2",
     "helmet": "^7.1.0",
     "http": "^0.0.1-security",
+    "mdb-react-ui-kit": "^7.2.0",
     "morgan": "^1.10.0",
     "package.json": "^2.0.1",
+    "react-bootstrap": "^2.10.1",
+    "react-hook-form": "^7.51.1",
     "sequelize": "^6.35.2",
     "sqlite3": "^5.1.6",
     "swagger-jsdoc": "^6.2.8",
@@ -29,14 +33,12 @@
     "tsconfig.json": "^1.0.11",
     "web-push": "^3.6.6"
   },
-  
   "trustedDependencies": [
     "sqlite3"
   ],
   "scripts": {
     "start:client": "cd client && yarn start",
-    "start:server": "node index.js", 
+    "start:server": "node index.js",
     "start": "concurrently \"npm run start:client\" \"npm run start:server\""
   }
-  
 }
