--- a/BlazePWA/FireAlarmApp/client/package.json
+++ b/BlazePWA/FireAlarmApp/client/package.json
@@ -3,16 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@remixicon/react": "^4.2.0",
+    "@tanstack/react-table": "^8.15.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tremor/react": "^3.15.0",
+    "axios": "^1.6.8",
+    "classnames": "^2.5.1",
+    "namor": "^3.0.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.2",
     "react-icons": "^5.0.1",
+    "react-pagination-table": "^2.0.2",
     "react-router-dom": "^6.21.2",
     "react-scripts": "5.0.1",
     "react-sliding-pane": "^7.3.0",
+    "react-table": "^7.8.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
