--- a/BlazePWA/FireAlarmApp/package.json
+++ b/BlazePWA/FireAlarmApp/package.json
@@ -10,8 +10,13 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.15.15",
+    "@tanstack/react-table": "^8.15.3",
     "@types/express": "^4.17.21",
     "@types/web-push": "^3.6.3",
+    "@unleashit/pagination": "^1.2.5",
     "app-root-path": "^3.1.0",
     "body-parser": "^1.20.2",
     "bootstrap": "^5.3.3",
@@ -23,9 +28,15 @@
     "http": "^0.0.1-security",
     "mdb-react-ui-kit": "^7.2.0",
     "morgan": "^1.10.0",
+    "next": "^14.1.4",
     "package.json": "^2.0.1",
-    "react-bootstrap": "^2.10.1",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.10.2",
+    "react-data-table-component": "^7.6.2",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.1",
+    "react-pagination-table": "^2.0.2",
+    "react-responsive-pagination": "^2.4.3",
     "sequelize": "^6.35.2",
     "sqlite3": "^5.1.6",
     "swagger-jsdoc": "^6.2.8",
